Fix mobile layout issue

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -8,16 +8,14 @@ html, body {
 .App {
     text-align: center;
     width: 100%;
-    max-width: 480px;
     height: 100vh;
-    /*max-height: 900px;*/
     background-color: var(--body-background-color);
     position: relative;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
+    padding: 24px 0;
 }
 
 .App-header {
@@ -26,7 +24,6 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
 }
 
 .toggle-theme {
@@ -77,7 +74,7 @@ html, body {
     justify-content: space-evenly;
     height: 40%;
     width: 80vw;
-    max-width: 480px;
+    /*max-width: 480px;*/
 }
 
 .weather-container {
@@ -85,7 +82,7 @@ html, body {
     align-items: center;
     /*flex-grow: 1;*/
     width: 80vw;
-    max-width: 460px;
+    /*max-width: 460px;*/
 }
 
 
